Fixes styling issues with cards in pipeline settings + fixes textoverflow ellipsis in side panel on minimized state

--- a/cdap-ui/app/directives/my-pipeline-settings/my-batch-pipeline-settings/my-batch-pipeline-settings.less
+++ b/cdap-ui/app/directives/my-pipeline-settings/my-batch-pipeline-settings/my-batch-pipeline-settings.less
@@ -24,7 +24,7 @@ my-batch-pipeline-settings {
     }
     my-card {
       &.engine {
-        flex-grow: 0.2;
+        flex: 0.3;
         label {
           font-weight: 500;
           color: gray;
@@ -32,7 +32,7 @@ my-batch-pipeline-settings {
         }
       }
       &.schedule {
-        flex: 0.8;
+        flex: 0.7;
         margin-right: 10px;
         label {
           font-weight: 500;
